[MODINVOICE-302] - Improve backend error reporting by including cause in error message systematically (#470)
* [MODINVOICE-302] - Improve backend error reporting by including cause in error message systematically

* [MODINVOICE-302] - Covered tests

* [MODINVOICE-302] - Covered tests

* [MODINVOICE-302] - Improve backend error reporting by including cause in error message systematically

* [MODINVOICE-302] - Minor improvement

* [MODINVOICE-302] - Minor improvement

* [MODINVOICE-302] - Minor improvement: retrieving toList() in some places and improved error messages

* [MODINVOICE-302] - Minor improvement: retrieved toList()

* [MODINVOICE-302] - fixed error code descriptions to work with string format

* [MODINVOICE-302] - fixed tests

* [MODINVOICE-302] - Moving one line message to parameter

* [MODINVOICE-302] - improved error messages with identifiers

* [MODINVOICE-302] - improved errors

* [MODINVOICE-302] - Fixed error

* [MODINVOICE-302] - Added tests for

* [MODINVOICE-302] - Moved error parameter to string as message

* [MODINVOICE-302] - Fixed test

* [MODINVOICE-302] - removed often failed test

* MODINVOICE-302. Add full log to some method

* MODINVOICE-302. Simplify code a bit

* Revert "[MODINVOICE-302] - Moved error parameter to string as message"

This reverts commit 6d06fcce722ebd9d765e195cdbdca84fc7341638.

* [MODINVOICE-302] - Reverted String message approach

---------

Co-authored-by: Serhii_Nosko <Serhii_Nosko@epam.com>