@@ -16,9 +16,9 @@ import static org.folio.rest.acq.model.finance.Transaction.TransactionType.CREDI
 import static org.folio.rest.acq.model.finance.Transaction.TransactionType.PAYMENT;
 import static org.folio.rest.acq.model.finance.Transaction.TransactionType.PENDING_PAYMENT;
 
-import java.util.Collections;
 import java.util.List;
 
+import io.vertx.core.Future;
 import one.util.streamex.StreamEx;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -31,7 +31,6 @@ import org.folio.rest.acq.model.finance.TransactionCollection;
 import org.folio.rest.acq.model.orders.PoLine;
 import org.folio.rest.acq.model.orders.PurchaseOrder;
 import org.folio.rest.core.models.RequestContext;
-import org.folio.rest.jaxrs.model.Error;
 import org.folio.rest.jaxrs.model.Invoice;
 import org.folio.rest.jaxrs.model.InvoiceLine;
 import org.folio.rest.jaxrs.model.Parameter;
@@ -40,8 +39,6 @@ import org.folio.services.finance.transaction.EncumbranceService;
 import org.folio.services.order.OrderLineService;
 import org.folio.services.order.OrderService;
 import org.folio.services.voucher.VoucherService;
-
-import io.vertx.core.Future;
 
 public class InvoiceCancelService {
   private static final String PO_LINES_WITH_RIGHT_PAYMENT_STATUS_QUERY =
@@ -104,11 +101,8 @@ public class InvoiceCancelService {
   private void validateCancelInvoice(Invoice invoiceFromStorage) {
     List<Invoice.Status> cancellable = List.of(Invoice.Status.APPROVED, Invoice.Status.PAID);
     if (!cancellable.contains(invoiceFromStorage.getStatus())) {
-      List<Parameter> parameters = Collections.singletonList(
-        new Parameter().withKey(INVOICE_ID).withValue(invoiceFromStorage.getId()));
-      Error error = CANNOT_CANCEL_INVOICE.toError()
-        .withParameters(parameters);
-      throw new HttpException(422, error);
+      var param = new Parameter().withKey(INVOICE_ID).withValue(invoiceFromStorage.getId());
+      throw new HttpException(422, CANNOT_CANCEL_INVOICE, List.of(param));
     }
   }
 
@@ -147,9 +141,9 @@ public class InvoiceCancelService {
     return baseTransactionService.batchCancel(transactions, requestContext)
       .recover(t -> {
         logger.error("Failed to cancel transactions for invoice with id {}", invoiceId, t);
-        List<Parameter> parameters = Collections.singletonList(
-          new Parameter().withKey(INVOICE_ID).withValue(invoiceId));
-        throw new HttpException(500, CANCEL_TRANSACTIONS_ERROR.toError().withParameters(parameters));
+        var param = new Parameter().withKey(INVOICE_ID).withValue(invoiceId);
+        var causeParam = new Parameter().withKey("cause").withValue(t.getMessage());
+        throw new HttpException(500, CANCEL_TRANSACTIONS_ERROR, List.of(param, causeParam));
       });
   }
 
@@ -182,11 +176,9 @@ public class InvoiceCancelService {
     return poLinesFuture.compose(poLines -> selectPoLinesWithOpenOrders(poLines, requestContext))
       .compose(poLines -> unreleaseEncumbrancesForPoLines(poLines, invoiceFromStorage, requestContext))
       .recover(t -> {
-        Throwable cause = requireNonNullElse(t.getCause(), t);
-        List<Parameter> parameters = Collections.singletonList(
-          new Parameter().withKey("cause").withValue(cause.toString()));
-        Error error = ERROR_UNRELEASING_ENCUMBRANCES.toError().withParameters(parameters);
-        logger.error(error.getMessage(), cause);
+        logger.error("Failed to unrelease encumbrance for po lines", t);
+        var param = new Parameter().withKey("cause").withValue(requireNonNullElse(t.getCause(), t).toString());
+        var error = ERROR_UNRELEASING_ENCUMBRANCES.toError().withParameters(List.of(param));
         throw new HttpException(500, error);
       });
   }
@@ -204,7 +196,7 @@ public class InvoiceCancelService {
       .collect(toList());
     return orderService.getOrders(queryToGetOpenOrdersByIds(orderIds), requestContext)
       .map(orders -> {
-        List<String> openOrderIds = orders.stream().map(PurchaseOrder::getId).collect(toList());
+        List<String> openOrderIds = orders.stream().map(PurchaseOrder::getId).toList();
         return poLines.stream()
           .filter(poLine -> openOrderIds.contains(poLine.getPurchaseOrderId()))
           .collect(toList());
